<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#FFF54353">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:src="@drawable/back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_toEndOf="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_detector"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:textColor="#FFFF"/>
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/cameraview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Button to start camera -->
    <Button
        android:id="@+id/btn_start_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_camera"/>

    <!-- Button to stop camera -->
    <Button
        android:id="@+id/btn_stop_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stop_camera"/>
</LinearLayout>
