<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF54353"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:tint="#ffffff"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_back_button"
            android:text="@string/calling_name"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/anak"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_description_anak"
                            android:scaleType="centerCrop"
                            android:src="@drawable/anak" />

                        <TextView
                            android:id="@+id/textView_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_letter_anak"
                            android:textAlignment="center"
                            android:textColor="#151111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/adik"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_description_adik"
                            android:scaleType="centerCrop"
                            android:src="@drawable/adik" />

                        <TextView
                            android:id="@+id/textView_adik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_letter_adik"
                            android:textAlignment="center"
                            android:textColor="#151111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ayah"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_description_ayah"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ayah" />

                        <TextView
                            android:id="@+id/textView_ayah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_letter_ayah"
                            android:textAlignment="center"
                            android:textColor="#151111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/nenek"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_description_nenek"
                            android:scaleType="centerCrop"
                            android:src="@drawable/nenek" />

                        <TextView
                            android:id="@+id/textView_nenek"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_letter_nenek"
                            android:textAlignment="center"
                            android:textColor="#151111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/bapak"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_description_bapak"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bapak" />

                        <TextView
                            android:id="@+id/textView_bapak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_letter_bapak"
                            android:textAlignment="center"
                            android:textColor="#151111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ibu"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_description_ibu"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ibu" />

                        <TextView
                            android:id="@+id/textView_ibu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_letter_ibu"
                            android:textAlignment="center"
                            android:textColor="#151111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
